[project]
name = "st-lms-core"
version = "1.0.1"
description = "ST_LMS — 13-Layer Pipeline (C001-C012 + Post-Trade) | Supertrend + River + Darwin + Risk + Backtest"
requires-python = ">=3.12"
dependencies = [
    "python-binance>=1.0.19",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [".."]

[tool.setuptools.packages.find]
where = ["."]
